# OOP-Library-Part-3

./: Aplicatie.cpp  Aplicatie.h  CMakeLists.txt  Caiet.cpp  Caiet.h  Carte.cpp  Carte.h  Carte_educativa.cpp  Carte_educativa.h  Carte_ilustrata.cpp  Carte_ilustrata.h  Comparare_carti.h  Enciclopedie.cpp  Enciclopedie.h  Fabrica.cpp  Fabrica.h  Foaie.cpp  Foaie.h  Manual.cpp  Manual.h  Obiecte_de_scris.cpp  Obiecte_de_scris.h  Obiecte_pe_care_scrii.cpp  Obiecte_pe_care_scrii.h  Papetarie.cpp  Papetarie.h  Pix.cpp  Pix.h  Romana.cpp  Romana.h  Stilou.cpp  Stilou.h  Sumaelem.h  class_diagram1.drawio  main.cpp
