cmake_minimum_required(VERSION 3.16)
project(tema3)

set(CMAKE_CXX_STANDARD 14)

add_executable(tema3 main.cpp Aplicatie.cpp Aplicatie.h Carte.h Carte.cpp Carte_ilustrata.h Carte_ilustrata.cpp Carte_educativa.h Carte_educativa.cpp Enciclopedie.h Enciclopedie.cpp Comparare_carti.h Sumaelem.h Papetarie.h Papetarie.cpp Caiet.h Caiet.cpp Foaie.h Foaie.cpp Pix.h Pix.cpp Stilou.h Stilou.cpp Fabrica.h Fabrica.cpp Obiecte_de_scris.h Obiecte_de_scris.cpp Obiecte_pe_care_scrii.h Obiecte_pe_care_scrii.cpp Manual.h Manual.cpp Romana.h Romana.cpp)
